# encryptedMessagingChat

./: .gitignore  QUANTUM_MIGRATION_GUIDE.md  README.md  package-lock.json  package.json
anchor/: Anchor.toml
anchor/programs/relay/: Cargo.toml
anchor/programs/relay/src/: lib.rs
public/idl/: relay.json
web/components/account/: account-data-access.tsx
web/components/dashboard/: dashboard-feature.tsx
web/components/relay/: MyRegistry.tsx  WalletConnectionGate.tsx  register-wallet.tsx  relay-data-access.tsx  relay-ui.tsx
web/components/ui/: HomeTiles.tsx  KeyPairGenerator.tsx  QuantumKeyPairGenerator.tsx
web/lib/: quantum-crypto.ts
